--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "vuepress dev docs",
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs",
+    "deploy": "set NODE_OPTIONS=--openssl-legacy-provider && bash deploy.sh"
   },
   "keywords": [],
   "author": "",
